--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,19 @@
-name: Build MT7981-AX3000
+name: padavanonly-k6.6-mt7981
 # 脚本参考github/haiibo
 # Add a button to trigger the workflow
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - master
 
-permissions:
-  contents: write
 env:
   REPO_URL: https://github.com/padavanonly/immortalwrt-mt798x-6.6.git
-  REPO_BRANCH: "openwrt-24.10-6.6"
+  REPO_BRANCH: openwrt-24.10-6.6
   CONFIG_FILE: defconfig/mt7981-ax3000.config
+  CLASH_KERNEL: amd64
   CACHE_TOOLCHAIN: true
+  UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: false
   FIRMWARE_RELEASE: true
-  FIRMWARE_TAG: mt7981-ax3000-24.10
+  FIRMWARE_TAG: padavanonly-k6.6-mt798x
   TZ: Asia/Shanghai
 
 jobs:
@@ -38,19 +35,30 @@ jobs:
           echo "--------------------------硬盘信息--------------------------"
           echo "硬盘数量：$(ls /dev/sd* | grep -v [1-9] | wc -l)" && df -hT
 
-      - name: Initialization Environment(初始化环境)
+      - name: Initialization environment
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
-          docker rmi $(docker images -q)
-          sudo rm -rf /usr/share/dotnet /etc/apt/sources.list.d /usr/local/lib/android $AGENT_TOOLSDIRECTORY
-          sudo -E apt-get -y purge azure-cli ghc* zulu* llvm* firefox google* dotnet* powershell openjdk* mongodb* moby* || true
-          sudo -E apt-get -y update
-          sudo -E apt-get -y install $(curl -fsSL is.gd/depends_ubuntu_2204)
-          sudo -E systemctl daemon-reload
+          set +e
+          docker rmi `docker images -q`
+          echo "Deleting files, please wait ..."
+          sudo rm -rf \
+            /usr/share/dotnet \
+            /usr/local/lib/android \
+            /opt/ghc \
+            /etc/mysql \
+            /etc/php
+          sudo -E apt-get -y purge azure-cli* docker* ghc* zulu* hhvm* llvm* firefox* google* dotnet* aspnetcore* powershell* openjdk* adoptopenjdk* mysql* php* mongodb* moby* snap* || true
+          sudo -E apt-get update
+          sudo -E apt-get -y install ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential \
+            bzip2 ccache clang cmake cpio curl device-tree-compiler flex gawk gcc-multilib g++-multilib gettext \
+            genisoimage git gperf haveged help2man intltool libc6-dev-i386 libelf-dev libfuse-dev libglib2.0-dev \
+            libgmp3-dev libltdl-dev libmpc-dev libmpfr-dev libncurses5-dev libncursesw5-dev libpython3-dev \
+            libreadline-dev libssl-dev libtool llvm lrzsz msmtp ninja-build p7zip p7zip-full patch pkgconf \
+            python3 python3-pyelftools python3-setuptools qemu-utils rsync scons squashfs-tools subversion \
+            swig texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev
           sudo -E apt-get -y autoremove --purge
-          sudo -E apt-get -y clean
-          sudo timedatectl set-timezone "$TZ"
+          sudo -E apt-get clean
 
       - name: Combine Disks(合并磁盘)
         uses: easimon/maximize-build-space@master
@@ -60,7 +68,7 @@ jobs:
           root-reserve-mb: 1024
 
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@main
 
       - name: Clone Source Code(克隆源代码)
         run: |
@@ -80,13 +88,13 @@ jobs:
         uses: HiGarfield/cachewrtbuild@main
         with:
           ccache: false
-          mixkey: ${{ env.SOURCE_REPO }}-${{ env.REPO_BRANCH }}-${{ env.SOURCE_AUTHOR }}-mt7981-ax3000
+          mixkey: ${{ env.SOURCE_REPO }}-${{ env.REPO_BRANCH }}-${{ env.SOURCE_AUTHOR }}
           prefix: ${{ env.OPENWRT_PATH }}
 
       - name: Install Feeds(安装feeds)
         run: |
           cd $OPENWRT_PATH
-          cat feeds.conf.default
+          sed -i '1i src-git passwall_packages https://github.com/xiaorouji/openwrt-passwall-packages.git' feeds.conf.default
           ./scripts/feeds update -a
           ./scripts/feeds install -a
           ./scripts/feeds update -a
@@ -94,21 +102,10 @@ jobs:
 
       - name: Download DL Package(下载DL软件包)
         run: |
+          cp $OPENWRT_PATH/$CONFIG_FILE $OPENWRT_PATH/.config
           cd $OPENWRT_PATH
-          # 使用源码仓库自带的 defconfig 文件
-          if [ -f "${{ env.CONFIG_FILE }}" ]; then
-            echo "Found config file in source repo: ${{ env.CONFIG_FILE }}"
-            cp -f ${{ env.CONFIG_FILE }} .config
-            echo "Config file content:"
-            cat .config
-          else
-            echo "ERROR: Config file not found: ${{ env.CONFIG_FILE }}"
-            echo "Available defconfig files:"
-            ls -la defconfig/ || echo "defconfig directory not found"
-            exit 1
-          fi
           make defconfig
-          make download -j$(nproc)
+          make download -j8
           find dl -size -1024c -exec ls -l {} \;
           find dl -size -1024c -exec rm -f {} \;
 
@@ -126,6 +123,13 @@ jobs:
         if: (!cancelled())
         run: df -hT
 
+      - name: Upload Bin Directory(上传固件)
+        if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
+        uses: actions/upload-artifact@main
+        with:
+          name: ${{ env.SOURCE_REPO }}-bin-${{ env.DEVICE_TARGET }}-${{ env.DEVICE_SUBTARGET }}-${{ env.FILE_DATE }}
+          path: ${{ env.OPENWRT_PATH }}/bin
+
       - name: Organize Files(整理文件)
         if: steps.compile.outputs.status == 'success'
         run: |
@@ -134,13 +138,17 @@ jobs:
           cp $OPENWRT_PATH/.config full.config
           rm -rf packages feeds.buildinfo version.buildinfo
           echo "FIRMWARE_PATH=$PWD" >> $GITHUB_ENV
-          echo "Files to be uploaded:"
-          ls -lh *.bin *.img 2>/dev/null || echo "Warning: No firmware images found!"
-          ls -lh
+
+      - name: Upload Firmware To Artifact(将固件上传到Artifact)
+        if: steps.compile.outputs.status == 'success' && env.UPLOAD_FIRMWARE == 'true'
+        uses: actions/upload-artifact@main
+        with:
+          name: ${{ env.FIRMWARE_TAG }}-${{ env.FILE_DATE }}
+          path: ${{ env.FIRMWARE_PATH }}
 
       - name: Upload Firmware To Release(发布固件)
         if: steps.compile.outputs.status == 'success' && env.FIRMWARE_RELEASE == 'true'
-        uses: ncipollo/release-action@v1.14.0
+        uses: ncipollo/release-action@v1
         with:
           name: R${{ env.DATE }} for ${{ env.FIRMWARE_TAG }}
           allowUpdates: true
@@ -149,7 +157,6 @@ jobs:
           artifacts: ${{ env.FIRMWARE_PATH }}/*
           body: |
             ### 📒 固件信息
-            - 💻 这是mt798x平台使用的 OpenWrt 闭源驱动固件
             - ⚽ 固件源码: ${{ env.REPO_URL }}
             - 💝 源码分支: ${{ env.REPO_BRANCH }}
             - 🌐 默认地址: 192.168.6.1
